# Photo_Bestway

./: .gitignore  CMakeLists.txt  README.md  draw.py  main.cpp  result.txt
data/txt/: input.txt  output.txt
load_png/: CMakeLists.txt
src/: main.cpp
src/algorithm/: classes.h  search.cpp  search.h
src/data_preparing/: open_file.cpp  open_file.h
src/drawing/: draw.py  get_line.cpp  get_line.h  image.py  run_py_script.h
